Update rpi-rgb-led-matrix submodule, fix demo for FM6126A displays

--- a/boot/wpa_supplicant.conf
+++ b/boot/wpa_supplicant.conf
@@ -3,7 +3,7 @@ update_config=1
 country=US
 
 network={
-     ssid="Your network name/SSID"
-     psk="Your WPA/WPA2 security key"
+     ssid="Tron Legacy"
+     psk="scovolinosifonedottoenergetico"
      key_mgmt=WPA-PSK
 }
