--- a/submodules/CMakeLists.txt
+++ b/submodules/CMakeLists.txt
@@ -1,4 +1,5 @@
 set(JSON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/json/src PARENT_SCOPE)
+set(RGB_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/rpi-rgb-led-matrix/include PARENT_SCOPE)
 
 # Don't build external libraries tests
 set(JSON_BuildTests OFF CACHE INTERNAL "")
@@ -14,4 +15,19 @@ endif()
 add_subdirectory(cpr)
 add_subdirectory(json)
 
-#add_library(json SHARED ${CMAKE_CURRENT_SOURCE_DIR}/json/src)
+ProcessorCount(NCPU)
+
+ExternalProject_Add(rpi-rgb-led-matrix
+    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/rpi-rgb-led-matrix
+    BUILD_COMMAND make
+    PREFIX rpi-rgb-led-matrix
+    CONFIGURE_COMMAND ""
+    BUILD_COMMAND -j${NCPU}
+    BUILD_IN_SOURCE 1
+    INSTALL_COMMAND ""
+   )
+
+ExternalProject_Add_Step(rpi-rgb-led-matrix copytobin
+    COMMAND $(CMAKE_COMMAND) -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/rpi-rgb-led-matrix/lib ${GLOBAL_OUTPUT_PATH}
+    DEPENDEES install
+   )
