Add display inheritance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,20 @@ project(tapioca VERSION 0.1 LANGUAGES CXX)
 find_package (Threads)
 
 if(NOT ${CMAKE_VERSION} LESS 3.2)
-    set(CMAKE_CXX_STANDARD 11)
+    set(CMAKE_CXX_STANDARD 14)
     set(CMAKE_CXX_STANDARD_REQUIRED ON)
 else()
-    message(STATUS "Checking compiler flags for C++11 support.")
-    # Set C++11 support flags for various compilers
+    message(STATUS "Checking compiler flags for C++14 support.")
+    # Set C++14 support flags for various compilers
     include(CheckCXXCompilerFlag)
-    check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
+    check_cxx_compiler_flag("-std=c++14" COMPILER_SUPPORTS_CXX14)
     check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-    if(COMPILER_SUPPORTS_CXX11)
-        message(STATUS "C++11 is supported.")
+    if(COMPILER_SUPPORTS_CXX14)
+        message(STATUS "C++14 is supported.")
         if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -stdlib=libc++")
         else()
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
         endif()
     elseif(COMPILER_SUPPORTS_CXX0X)
         message(STATUS "C++0x is supported.")
@@ -27,7 +27,7 @@ else()
             set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
         endif()
     else()
-        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++14 support. Please use a different C++ compiler.")
     endif()
 endif()
 
@@ -35,8 +35,8 @@ include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
 include(${CMAKE_ROOT}/Modules/ProcessorCount.cmake)
 
 set (PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
-set (TAPIOCA_SOURCES ${PROJECT_SOURCE_DIR}/tapioca.cc)
 set (GLOBAL_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
+file(GLOB TAPIOCA_SOURCES ${PROJECT_SOURCE_DIR}/*.cc)
 
 add_subdirectory(submodules)
 include_directories(${CPR_INCLUDE_DIRS})
