--- a/boot/wpa_supplicant.conf
+++ b/boot/wpa_supplicant.conf
@@ -1,9 +1,8 @@
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
-country=US
+country=<Insert 2 letter ISO 3166-1 country code here>
 
 network={
-***REMOVED***
-***REMOVED***
-     key_mgmt=WPA-PSK
+ ssid="<Name of your WiFi>"
+ psk="<Password for your WiFi>"
 }
